[fix]  When event is creating added organizer to table user relations with event